cmake_minimum_required(VERSION 3.26)

project(cuda-by-examples LANGUAGES C CXX CUDA)

add_subdirectory(Chapter_3)
add_subdirectory(Chapter_4)
add_subdirectory(Chapter_5)
add_subdirectory(Chapter_6)
add_subdirectory(Chapter_7)
add_subdirectory(Chapter_9)
add_subdirectory(Chapter_10)
add_subdirectory(textureAndSurface)